# haar

./: CMakeLists.txt  haarcascade_drone.xml  haarcascade_drone2.xml  haarcascade_drone3.xml  haarcascade_drone4.xml
output/: timelog.txt
src/: detect.cpp  detect_drone_template.cpp  detect_drone_with_box_estimation.cpp  detect_haar_threshold_roi.cpp  haar_tracking_roi.cpp  main.cpp
